// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getHarborsData success path harbors follow the expected shape 1`] = `
Object {
  "electricity": 1,
  "gate": 1,
  "id": "SGFyYm9yTm9kZTpmN2M2YTQwZjAtOWViMi0zZjgyMTI0YjY0OGI=",
  "imageFile": undefined,
  "lighting": 1,
  "maxWidth": undefined,
  "municipality": undefined,
  "name": "Harbor 1",
  "numberOfPlaces": 0,
  "servicemapId": undefined,
  "streetAddress": undefined,
  "wasteCollection": 1,
  "water": 1,
  "wwwUrl": undefined,
  "zipCode": undefined,
}
`;

exports[`utils getHarborsData success path harbors follow the expected shape 2`] = `
Object {
  "electricity": 1,
  "gate": 1,
  "id": "SGFyYm9yTm9kZTplZDM1Q1ZTgtOGUyYS0zYmQxNDk4NjYzMDI=",
  "imageFile": undefined,
  "lighting": 2,
  "maxWidth": undefined,
  "municipality": undefined,
  "name": "Harbor 2",
  "numberOfPlaces": 0,
  "servicemapId": undefined,
  "streetAddress": undefined,
  "wasteCollection": 2,
  "water": 1,
  "wwwUrl": undefined,
  "zipCode": undefined,
}
`;
